istio/client-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-test-pod
  labels:
    app: istio-test-pod
#name space change 
  namespace: istio-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: istio-test-pod
  template:
    metadata:
      labels:
        app: istio-test-pod
    spec:
      containers:
#     - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
      - image: whchoi98/network-multitool
        imagePullPolicy: Always
        name: istio-test-pod
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
#add nodeSelector
      nodeSelector:
        nodegroup-type: "frontend-workloads"
