istio/istio-test01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clb-test-01-svc
  namespace: clb-test-01
spec:
  selector:
    app: clb-test-01
  ports:
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 8080
      targetPort: 80
