istio/istio-test01-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-test01-gw
  http:
  - route:
    - destination:
        host: istio-test01-svc
        port:
          number: 80
